# numba_pytest_anotation

./: README.MD  pyproject.toml
src/numba_wrapper/: numba_testing_wrapper.py
test/: test_numba_extremes_custom_annotation.py  test_numba_extremes_default_anotation.py
test/test_functions/: numba_function_custom_anotation.py  numba_function_default_anotation.py
