[tool.poetry]
name = "numba-pytest"
version = "0.1.0"
description = "Example numba annotation for getting test coverage"
authors = ["Sven Radovinovic"]
readme = "README.md"
packages = [{include = "numba_pytest"}]

[tool.poetry.dependencies]
python = "^3.10"
numba = "^0.56.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
